Removing all colors that didn't fit the rebrand
MAILAND-2745

--- a/app/src/main/res/drawable/ic_compose_shortcut.xml
+++ b/app/src/main/res/drawable/ic_compose_shortcut.xml
@@ -21,7 +21,7 @@
     <item>
         <shape
             android:shape="oval">
-            <solid android:color="?attr/brand_norm" />
+            <solid android:color="@color/cornflower_blue" />
             <padding
                 android:bottom="16dp"
                 android:left="16dp"
