--- a/app/src/main/res/layout/dialog_fragment_quick_snooze.xml
+++ b/app/src/main/res/layout/dialog_fragment_quick_snooze.xml
@@ -91,7 +91,7 @@
                     android:singleLine="true"
                     android:text="@string/turn_off"
                     android:textAllCaps="true"
-                    android:textColor="@color/red"
+                    android:textColor="@color/notification_error"
                     android:textSize="@dimen/h5" />
 
             </FrameLayout>
