--- a/app/src/main/res/layout/activity_edit_contact_details.xml
+++ b/app/src/main/res/layout/activity_edit_contact_details.xml
@@ -103,7 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1px"
                 android:layout_margin="@dimen/padding_s"
-                android:background="@color/lead_gray" />
+                android:background="@color/separator_norm" />
 
             <LinearLayout
                 android:id="@+id/card_view_top_part"
@@ -139,13 +139,6 @@
                         android:paddingEnd="@dimen/fields_default_space"
                         android:paddingRight="@dimen/fields_default_space" />
                 </LinearLayout>
-
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:layout_margin="@dimen/padding_s"
-                    android:background="@color/lead_gray" />
 
             </LinearLayout>
 
