--- a/app/src/main/res/layout/activity_edit_settings_item.xml
+++ b/app/src/main/res/layout/activity_edit_settings_item.xml
@@ -47,7 +47,7 @@
         android:id="@+id/progressBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white_55"
+        android:background="@color/background_norm"
         android:visibility="gone">
 
         <ProgressBar
