--- a/app/src/main/res/layout/attachment_list_item.xml
+++ b/app/src/main/res/layout/attachment_list_item.xml
@@ -77,7 +77,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:background="@drawable/compose_message_button_selector"
+        android:background="@color/transparent"
         android:contentDescription="@null"
         android:src="@drawable/ic_proton_cross_circle"
         app:tint="@color/notification_error" />
