--- a/app/src/main/res/layout/layout_contacts_edit_filed_type_selector.xml
+++ b/app/src/main/res/layout/layout_contacts_edit_filed_type_selector.xml
@@ -28,14 +28,13 @@
 
     <TextView
         android:id="@+id/optionTitle"
+        style="@style/Proton.Text.Default"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
         android:padding="@dimen/padding_m"
-        android:textColor="@color/contact_heading"
-        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnOptionType"
         app:layout_constraintStart_toStartOf="parent"
