--- a/app/src/main/res/layout/messages_list_footer_view.xml
+++ b/app/src/main/res/layout/messages_list_footer_view.xml
@@ -33,7 +33,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/divider_height"
             android:layout_alignParentBottom="true"
-            android:background="@color/fog_gray"
-            android:visibility="gone"/>
+		android:background="@color/separator_norm"
+		android:visibility="gone"/>
 
 </RelativeLayout>
