Replace the "empty folder" background images with rebranded ones
MAILAND-2787

--- a/app/src/main/res/drawable/img_empty_mailbox.xml
+++ b/app/src/main/res/drawable/img_empty_mailbox.xml
@@ -1,22 +1,3 @@
-<!--
-  ~ Copyright (c) 2022 Proton Technologies AG
-  ~
-  ~ This file is part of ProtonMail.
-  ~
-  ~ ProtonMail is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ ProtonMail is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="375dp"
@@ -27,31 +8,19 @@
       android:pathData="M212.993,44.713H159.201C157.897,44.712 156.623,45.111 155.552,45.856C154.481,46.601 153.664,47.657 153.211,48.88L137.438,91.398C136.936,92.752 136.679,94.183 136.679,95.626V120.553C136.679,122.406 137.415,124.183 138.725,125.494C140.035,126.804 141.813,127.54 143.666,127.54H228.522C229.44,127.54 230.348,127.359 231.196,127.008C232.044,126.657 232.814,126.142 233.463,125.494C234.111,124.845 234.626,124.075 234.977,123.227C235.328,122.379 235.509,121.471 235.509,120.553V95.626C235.509,94.183 235.252,92.752 234.75,91.398L218.977,48.88C218.524,47.658 217.708,46.604 216.638,45.859C215.569,45.114 214.297,44.714 212.993,44.713Z">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startY="106.323"
-          android:startX="136.993"
-          android:endY="92.3772"
-          android:endX="258.963"
+          android:startY="112.5"
+          android:startX="67.5"
+          android:endY="22.9071"
+          android:endX="190.756"
           android:type="linear">
-        <item android:offset="0.11996" android:color="#FF81D1FF"/>
-        <item android:offset="0.678155" android:color="#FF68B0FF"/>
-        <item android:offset="1" android:color="#FF328EF2"/>
+        <item android:offset="0.11996" android:color="#FFEEBEFF"/>
+        <item android:offset="1" android:color="#FF6D4AFF"/>
       </gradient>
     </aapt:attr>
   </path>
   <path
-      android:pathData="M227.731,88.049L214.349,50.785C214.181,50.318 213.873,49.914 213.466,49.628C213.06,49.342 212.575,49.189 212.078,49.189H160.116C159.62,49.189 159.135,49.342 158.728,49.627C158.322,49.913 158.013,50.317 157.845,50.785L144.461,88.049C144.307,88.481 144.258,88.943 144.319,89.397C144.381,89.851 144.55,90.284 144.814,90.659C145.077,91.034 145.427,91.34 145.834,91.551C146.241,91.762 146.692,91.873 147.15,91.873H163.267C163.935,91.873 164.588,92.074 165.14,92.45C165.693,92.826 166.119,93.36 166.365,93.981L169.221,101.212C169.467,101.833 169.894,102.366 170.446,102.742C170.998,103.117 171.651,103.318 172.319,103.318H199.871C200.539,103.318 201.192,103.117 201.744,102.742C202.297,102.366 202.724,101.833 202.969,101.212L205.823,93.981C206.069,93.359 206.496,92.826 207.049,92.45C207.602,92.074 208.255,91.873 208.924,91.873H225.038C225.496,91.873 225.948,91.763 226.356,91.552C226.763,91.341 227.113,91.036 227.377,90.661C227.642,90.286 227.812,89.853 227.873,89.398C227.935,88.944 227.886,88.481 227.731,88.049Z">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startY="76.3805"
-          android:startX="153.627"
-          android:endY="76.3805"
-          android:endX="242.995"
-          android:type="linear">
-        <item android:offset="0" android:color="#FF4497EF"/>
-        <item android:offset="1" android:color="#FF1958D2"/>
-      </gradient>
-    </aapt:attr>
-  </path>
+      android:pathData="M227.731,88.049L214.349,50.785C214.181,50.318 213.873,49.914 213.466,49.628C213.06,49.342 212.575,49.189 212.078,49.189H160.116C159.62,49.189 159.135,49.342 158.728,49.627C158.322,49.913 158.013,50.317 157.845,50.785L144.461,88.049C144.307,88.481 144.258,88.943 144.319,89.397C144.381,89.851 144.55,90.284 144.814,90.659C145.077,91.034 145.427,91.34 145.834,91.551C146.241,91.762 146.692,91.873 147.15,91.873H163.267C163.935,91.873 164.588,92.074 165.14,92.45C165.693,92.826 166.119,93.36 166.365,93.981L169.221,101.212C169.467,101.833 169.894,102.366 170.446,102.742C170.998,103.117 171.651,103.318 172.319,103.318H199.871C200.539,103.318 201.192,103.117 201.744,102.742C202.297,102.366 202.724,101.833 202.969,101.212L205.823,93.981C206.069,93.359 206.496,92.826 207.049,92.45C207.602,92.074 208.255,91.873 208.924,91.873H225.038C225.496,91.873 225.948,91.763 226.356,91.552C226.763,91.341 227.113,91.036 227.377,90.661C227.642,90.286 227.812,89.853 227.873,89.398C227.935,88.944 227.886,88.481 227.731,88.049Z"
+      android:fillColor="#6745F3"/>
   <path
       android:pathData="M209.254,69.721C209.124,69.297 208.862,68.926 208.506,68.662C208.149,68.399 207.718,68.256 207.274,68.257H164.918C164.475,68.257 164.043,68.399 163.687,68.663C163.331,68.926 163.068,69.297 162.939,69.721L156.16,91.866H163.262C163.93,91.866 164.583,92.067 165.136,92.443C165.688,92.819 166.115,93.353 166.36,93.975L169.216,101.206C169.461,101.827 169.888,102.361 170.441,102.737C170.993,103.113 171.646,103.314 172.314,103.314H199.867C200.535,103.314 201.187,103.113 201.74,102.737C202.292,102.362 202.719,101.829 202.965,101.208L205.819,93.977C206.065,93.355 206.492,92.821 207.044,92.445C207.597,92.069 208.251,91.868 208.919,91.868H216.021L209.254,69.721Z"
       android:fillAlpha="0.35">
@@ -62,39 +31,27 @@
           android:endY="53.3316"
           android:endX="238.614"
           android:type="linear">
-        <item android:offset="0" android:color="#001249A1"/>
-        <item android:offset="1" android:color="#FF0D3F96"/>
+        <item android:offset="0" android:color="#0017036B"/>
+        <item android:offset="1" android:color="#FF17036B"/>
       </gradient>
     </aapt:attr>
   </path>
   <path
       android:pathData="M227.731,88.049C227.886,88.481 227.935,88.943 227.873,89.398C227.812,89.852 227.642,90.285 227.378,90.66C227.114,91.034 226.764,91.34 226.357,91.551C225.95,91.763 225.498,91.873 225.04,91.873H208.926C208.257,91.873 207.604,92.074 207.051,92.45C206.499,92.826 206.071,93.359 205.826,93.981L202.972,101.212C202.727,101.834 202.3,102.367 201.747,102.743C201.195,103.119 200.542,103.32 199.874,103.32H172.321C171.653,103.32 171,103.119 170.448,102.743C169.895,102.367 169.468,101.834 169.223,101.212L166.367,93.981C166.122,93.359 165.695,92.826 165.142,92.45C164.59,92.074 163.937,91.873 163.269,91.873H147.153C146.694,91.872 146.243,91.762 145.836,91.551C145.43,91.34 145.08,91.034 144.816,90.659C144.553,90.284 144.383,89.851 144.321,89.397C144.26,88.943 144.309,88.481 144.464,88.049C144.161,88.733 144.034,89.481 144.094,90.227C144.154,90.972 144.399,91.69 144.807,92.317C145.215,92.943 145.773,93.458 146.431,93.814C147.088,94.17 147.824,94.356 148.572,94.356H162.409C162.896,94.356 163.371,94.499 163.777,94.767C164.184,95.035 164.502,95.416 164.694,95.863L167.588,102.606C168.03,103.636 168.764,104.513 169.699,105.129C170.634,105.745 171.729,106.073 172.849,106.073H199.332C200.452,106.073 201.547,105.745 202.482,105.128C203.416,104.512 204.15,103.635 204.591,102.606L207.485,95.863C207.677,95.416 207.996,95.034 208.402,94.766C208.809,94.498 209.285,94.356 209.772,94.356H223.61C224.358,94.359 225.096,94.174 225.755,93.819C226.414,93.464 226.974,92.949 227.384,92.323C227.794,91.696 228.04,90.976 228.101,90.23C228.161,89.484 228.034,88.734 227.731,88.049Z"
-      android:fillAlpha="0.7">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startY="106.073"
-          android:startX="233.346"
-          android:endY="106.073"
-          android:endX="142.9"
-          android:type="linear">
-        <item android:offset="0" android:color="#FFBFE8FF"/>
-        <item android:offset="1" android:color="#FFBFE8FF"/>
-      </gradient>
-    </aapt:attr>
-  </path>
+      android:fillColor="#BEB8FF"/>
   <path
       android:pathData="M253,38C253,24.745 242.255,14 229,14C215.745,14 205,24.745 205,38C205,51.255 215.745,62 229,62C242.255,62 253,51.255 253,38Z"
       android:strokeWidth="4"
       android:strokeColor="#ffffff">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startY="21"
-          android:startX="212.5"
+          android:startY="16"
+          android:startX="229"
           android:endY="60"
-          android:endX="239.5"
+          android:endX="229"
           android:type="linear">
-        <item android:offset="0" android:color="#FF68E578"/>
-        <item android:offset="1" android:color="#FF1CB78F"/>
+        <item android:offset="0" android:color="#FF2AF091"/>
+        <item android:offset="1" android:color="#FF00C5A1"/>
       </gradient>
     </aapt:attr>
   </path>
@@ -104,10 +61,8 @@
       android:fillType="evenOdd"/>
   <path
       android:pathData="M156.778,25.571C159.421,25.571 161.563,23.428 161.563,20.785C161.563,18.142 159.421,16 156.778,16C154.135,16 151.992,18.142 151.992,20.785C151.992,23.428 154.135,25.571 156.778,25.571Z"
-      android:strokeAlpha="0.45"
-      android:fillColor="#CED2E2"
-      android:fillAlpha="0.45"/>
+      android:fillColor="#F2EFE8"/>
   <path
       android:pathData="M143.379,49.499L135.722,46.671L132.198,45.366L130.893,41.842L128.065,34.185L125.237,41.842L123.932,45.366L120.408,46.671L112.751,49.499L120.408,52.326L123.932,53.632L125.237,57.155L128.065,64.812L130.893,57.155L132.198,53.632L135.722,52.326L143.379,49.499Z"
-      android:fillColor="#E1E4F5"/>
+      android:fillColor="#F2EFE8"/>
 </vector>
