--- a/app/src/main/res/drawable/img_no_messages_in_spam.xml
+++ b/app/src/main/res/drawable/img_no_messages_in_spam.xml
@@ -1,22 +1,3 @@
-<!--
-  ~ Copyright (c) 2022 Proton Technologies AG
-  ~
-  ~ This file is part of ProtonMail.
-  ~
-  ~ ProtonMail is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ ProtonMail is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="375dp"
@@ -35,8 +16,8 @@
           android:endY="81.712"
           android:endX="244.333"
           android:type="linear">
-        <item android:offset="0" android:color="#FFE1E4F5"/>
-        <item android:offset="1" android:color="#FFA7A3BC"/>
+        <item android:offset="0" android:color="#FFF2EFE8"/>
+        <item android:offset="1" android:color="#FFACACAC"/>
       </gradient>
     </aapt:attr>
   </path>
@@ -49,9 +30,9 @@
           android:endY="55.4872"
           android:endX="207.558"
           android:type="linear">
-        <item android:offset="0" android:color="#AAF1F8FF"/>
-        <item android:offset="0.441179" android:color="#8E9A99BC"/>
-        <item android:offset="1" android:color="#63BAB9D2"/>
+        <item android:offset="0" android:color="#FFFFFBF2"/>
+        <item android:offset="0.441179" android:color="#FFBABABA"/>
+        <item android:offset="1" android:color="#FFC4C4C4"/>
       </gradient>
     </aapt:attr>
   </path>
@@ -64,9 +45,9 @@
           android:endY="63.8998"
           android:endX="205.831"
           android:type="linear">
-        <item android:offset="0" android:color="#AAF1F8FF"/>
-        <item android:offset="0.441179" android:color="#8E9A99BC"/>
-        <item android:offset="1" android:color="#63BAB9D2"/>
+        <item android:offset="0" android:color="#FFFFFBF2"/>
+        <item android:offset="0.441179" android:color="#FFBABABA"/>
+        <item android:offset="1" android:color="#FFC4C4C4"/>
       </gradient>
     </aapt:attr>
   </path>
@@ -79,9 +60,9 @@
           android:endY="90.6816"
           android:endX="200.328"
           android:type="linear">
-        <item android:offset="0" android:color="#AAF1F8FF"/>
-        <item android:offset="0.441179" android:color="#8E9A99BC"/>
-        <item android:offset="1" android:color="#63BAB9D2"/>
+        <item android:offset="0" android:color="#FFFFFBF2"/>
+        <item android:offset="0.441179" android:color="#FFBABABA"/>
+        <item android:offset="1" android:color="#FFC4C4C4"/>
       </gradient>
     </aapt:attr>
   </path>
@@ -115,28 +96,28 @@
   </path>
   <path
       android:pathData="M190.854,6H185.507C184.999,6 184.512,6.202 184.153,6.561C183.794,6.92 183.592,7.407 183.592,7.915V11.803C183.595,12.153 183.692,12.496 183.874,12.796C184.055,13.095 184.314,13.34 184.623,13.505L190.854,16.742"
-      android:fillColor="#4C4A69"/>
+      android:fillColor="#5E5951"/>
   <path
       android:pathData="M230.772,25.359L229.839,26.944C227.214,31.397 225.829,36.472 225.829,41.642C225.831,46.049 226.839,50.398 228.777,54.357C230.714,58.316 233.529,61.78 237.008,64.485L241.908,68.286C243.217,69.303 244.277,70.605 245.007,72.093C245.736,73.581 246.116,75.217 246.117,76.875V128.531C246.117,129.378 245.95,130.217 245.626,130.999C245.302,131.782 244.827,132.493 244.228,133.092C243.629,133.691 242.918,134.166 242.135,134.49C241.353,134.814 240.514,134.981 239.667,134.981H196.021C195.174,134.981 194.335,134.814 193.552,134.49C192.77,134.166 192.059,133.691 191.46,133.092C190.861,132.493 190.386,131.782 190.062,130.999C189.738,130.217 189.571,129.378 189.571,128.531V75.694C189.571,74.296 189.847,72.912 190.382,71.621C190.918,70.33 191.702,69.157 192.691,68.17L206.456,54.206V25.34L230.772,25.359Z">
     <aapt:attr name="android:fillColor">
       <gradient 
           android:startY="80.6868"
-          android:startX="236.165"
-          android:endY="78.8234"
-          android:endX="192.468"
+          android:startX="249.5"
+          android:endY="87.2985"
+          android:endX="186.696"
           android:type="linear">
-        <item android:offset="0" android:color="#FF55A4FB"/>
-        <item android:offset="0.364583" android:color="#FF77C3FF"/>
-        <item android:offset="0.703125" android:color="#FF81D2FF"/>
+        <item android:offset="0" android:color="#FF6D4AFF"/>
+        <item android:offset="0.4444" android:color="#FF977DFF"/>
+        <item android:offset="1" android:color="#FFEEBEFF"/>
       </gradient>
     </aapt:attr>
   </path>
   <path
       android:pathData="M242.626,26.331H194.956C193.865,26.33 192.819,25.896 192.048,25.124C191.277,24.352 190.844,23.305 190.844,22.214V6H217.367C219.403,5.999 221.361,6.778 222.84,8.177C227.396,12.481 232.849,15.721 238.806,17.665L241.032,18.394C241.964,18.699 242.821,19.193 243.552,19.846C244.284,20.498 244.872,21.295 245.28,22.185C245.487,22.63 245.578,23.121 245.546,23.61C245.513,24.1 245.357,24.574 245.092,24.987C244.827,25.4 244.463,25.74 244.032,25.975C243.601,26.21 243.117,26.333 242.626,26.331Z"
-      android:fillColor="#F4F3F3"/>
+      android:fillColor="#F4F2F2"/>
   <path
       android:pathData="M205.721,26.331C205.721,26.331 201.736,36.134 194.878,43.585C194.739,43.736 194.57,43.856 194.382,43.936C194.193,44.016 193.99,44.054 193.785,44.049C193.581,44.043 193.38,43.994 193.196,43.904C193.012,43.814 192.849,43.685 192.72,43.527C192.534,43.302 192.423,43.026 192.399,42.736C192.376,42.446 192.442,42.155 192.588,41.904C195.32,37.17 196.792,31.815 196.866,26.351L205.721,26.331Z"
-      android:fillColor="#4C4A69"/>
+      android:fillColor="#5E5951"/>
   <path
       android:pathData="M246.13,81.46H189.589V117.568H246.13V81.46Z">
     <aapt:attr name="android:fillColor">
@@ -153,8 +134,8 @@
   </path>
   <path
       android:pathData="M273.785,116.571C276.428,116.571 278.571,114.428 278.571,111.785C278.571,109.143 276.428,107 273.785,107C271.143,107 269,109.143 269,111.785C269,114.428 271.143,116.571 273.785,116.571Z"
-      android:fillColor="#E1E4F5"/>
+      android:fillColor="#F2EFE8"/>
   <path
       android:pathData="M114,20.5L107.75,18.192L104.874,17.126L103.808,14.25L101.5,8L99.192,14.25L98.126,17.126L95.25,18.192L89,20.5L95.25,22.808L98.126,23.874L99.192,26.75L101.5,33L103.808,26.75L104.874,23.874L107.75,22.808L114,20.5Z"
-      android:fillColor="#E1E4F5"/>
+      android:fillColor="#F2EFE8"/>
 </vector>
