--- a/app/src/main/res/layout/content_contact_group_details.xml
+++ b/app/src/main/res/layout/content_contact_group_details.xml
@@ -48,17 +48,38 @@
             android:layout_height="match_parent"
             android:divider="@null" />
 
-        <TextView
-            style="@style/Proton.Text.Default"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/noResults"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/margin_m"
-            android:text="@string/no_contacts"
-            android:textColor="?attr/brand_norm"
             android:visibility="gone"
-            tools:visibility="visible" />
+            tools:visibility="visible">
+
+
+            <ImageView
+                android:id="@+id/img_no_contacts"
+                android:layout_width="wrap_content"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:src="@drawable/img_no_contacts"
+                app:layout_constraintBottom_toTopOf="@id/no_contacts"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/no_contacts"
+                style="@style/Proton.Text.Headline"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/contacts_empty_state_no_contacts"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_no_contacts" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
 </RelativeLayout>
