--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -20,7 +20,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/contacts_list_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ProgressBar
         android:id="@+id/circularProgressBar"
@@ -39,14 +40,37 @@
         android:visibility="visible"
         tools:listitem="@layout/list_item_contacts" />
 
-    <TextView
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/noResults"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/no_contacts"
-        android:textAppearance="@style/Proton.Text.Headline"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        android:visibility="gone">
+
+
+        <ImageView
+            android:id="@+id/img_no_contacts"
+            android:layout_width="wrap_content"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:src="@drawable/img_no_contacts"
+            app:layout_constraintBottom_toTopOf="@id/no_contacts"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/no_contacts"
+            style="@style/Proton.Text.Headline"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/contacts_empty_state_no_contacts"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_no_contacts" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
