--- a/app/src/main/res/layout/fragment_message_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_message_action_sheet.xml
@@ -111,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/action_sheet_view_in_light_mode"
                 android:visibility="gone"
-                app:drawableStartCompat="@drawable/ic_sun"
+                app:drawableStartCompat="@drawable/ic_proton_sun"
                 tools:visibility="visible" />
 
             <TextView
@@ -121,7 +121,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/action_sheet_view_in_dark_mode"
                 android:visibility="gone"
-                app:drawableStartCompat="@drawable/ic_moon"
+                app:drawableStartCompat="@drawable/ic_proton_moon"
                 tools:visibility="visible" />
 
             <View style="@style/ViewSeparatorHorizontal" />
@@ -208,7 +208,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/view_headers"
-                app:drawableStartCompat="@drawable/ic_header_info" />
+                app:drawableStartCompat="@drawable/ic_proton_file_lines" />
 
             <TextView
                 android:id="@+id/text_view_details_actions_report_phishing"
