--- a/app/src/main/res/drawable/background_selection_mode_not_selected.xml
+++ b/app/src/main/res/drawable/background_selection_mode_not_selected.xml
@@ -26,7 +26,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="?attr/brand_norm" />
+        android:color="?attr/proton_interaction_norm" />
 
     <corners android:radius="8dp" />
 </shape>
