--- a/app/src/main/res/layout/dialog_fragment_quick_snooze.xml
+++ b/app/src/main/res/layout/dialog_fragment_quick_snooze.xml
@@ -18,7 +18,6 @@
   ~ along with Proton Mail. If not, see https://www.gnu.org/licenses/.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background_norm"
@@ -35,6 +34,7 @@
 
         <TextView
             android:id="@+id/dialog_title"
+            style="@style/Proton.Text.Default"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -42,11 +42,10 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:padding="0dp"
             android:text="@string/notifications_snooze"
-            android:textColor="#505061"
-            android:textSize="20sp" />
+            android:textColor="?attr/proton_interaction_norm" />
 
         <TextView
-            style="@style/Proton.Text.Default"
+            style="@style/Proton.Text.DefaultSmall.Interaction"
             android:id="@+id/notifications_resume_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,10 +54,7 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/fields_default_space"
             android:padding="0dp"
-            android:textColor="#505061"
-            android:textSize="14sp"
-            android:visibility="visible"
-            app:fontName="Roboto-Thin.ttf" />
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
