Uses the ProtonButtons for warning dialog
Crash was related to the buttons not being cast to the correct class

--- a/app/src/main/res/layout/layout_dialog_warning.xml
+++ b/app/src/main/res/layout/layout_dialog_warning.xml
@@ -64,7 +64,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Button
+        <me.proton.core.presentation.ui.view.ProtonButton
             android:id="@+id/cancel"
             android:layout_width="wrap_content"
             android:layout_height="42dp"
@@ -76,7 +76,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 			tools:text="Cancel"
 		/>
 
-        <Button
+        <me.proton.core.presentation.ui.view.ProtonButton
             android:id="@+id/ok"
             android:layout_width="wrap_content"
             android:layout_height="42dp"
